--- a/DetailTECMovilApp/DetailTECMovilApp.csproj
+++ b/DetailTECMovilApp/DetailTECMovilApp.csproj
@@ -20,6 +20,9 @@
     <EmbeddedResource Update="View\CitaDetail.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\CitaInfo.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="View\ClienteGestion.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
